<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/unitads" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <EditText
                    android:id="@+id/webobo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".80"
                    android:ems="10"
                    android:hint="@string/hint"
                    android:textSize="15sp"
                    android:inputType="textPersonName">

                    <requestFocus />
                </EditText>

                <Button
                    android:theme="@style/SpecialButton"
                    android:id="@+id/btndl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".23"
                    android:text="@string/past"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnshow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/show"
                android:layout_marginBottom="5dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="5dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sharethisapp"
                    android:id="@+id/sharethisapp"
                    android:width="200dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rateus"
                    android:id="@+id/rateus"
                    android:width="200dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moreapp"
                    android:id="@+id/moreapp"
                    android:width="200dp"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</ScrollView>